--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -5,8 +5,8 @@ on:
     branches: [ "main" ]
 
 env:
-  AWS_REGION: ap-south-1
-  S3_BUCKET: "tejas-idsk229"
+  AWS_REGION: n-verginia
+  S3_BUCKET: "bunnychacha"
 
 permissions:
   contents: read
